# stencil-wormhole

./: .gitignore  README.md  data_10.csv  expected_output.csv  extract_ker_times.py  heat  heat-diff-stencil.py  heat-diff-stencl.cpp  im2row.cpp  jacobi_method  jacobi_stencil  jacobi_stencil.cpp  latency_analysis.py  matmul_single_core.cpp  output  parse_logs.py  pipelining_extraction.py  result.csv  run.sh  run_noprof.sh  stencil_tenstorrent_host.cpp  tester.py  visualize.py
cpu_experiments/: laplace_tester.py
old_experiments/: heat-diff-stencil.cpp  im2row.cpp  im2row.hpp
sequential-solvers/: laplace_stencil.cpp
tt-metal_compilation_template/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main.cpp
tt-metal_compilation_template/CPM_modules/: Findbenchmark.cmake  Findflatbuffers.cmake  Findfmt.cmake  Findgoogletest.cmake  Findmagic_enum.cmake  Findpybind11.cmake  Findrange-v3.cmake  Findxtensor-blas.cmake  Findxtensor.cmake  Findxtl.cmake  Findyaml-cpp.cmake
tt-metal_compilation_template/kernels/: reader.cpp  writer.cpp
tt-metal_compilation_template/runtime/sfpi/: src-hashes
tt-metal_compilation_template/runtime/sfpi/compiler/lib/: libcc1.so.0.0.0
tt-metal_compilation_template/runtime/sfpi/compiler/lib/gcc/riscv32-unknown-elf/12.4.0/install-tools/: mkheaders.conf
tt-metal_compilation_template/runtime/sfpi/compiler/lib/gcc/riscv32-unknown-elf/12.4.0/plugin/: gtype.state  libcc1plugin.so.0.0.0  libcp1plugin.so.0.0.0
tt-metal_compilation_template/runtime/sfpi/compiler/lib/gcc/riscv32-unknown-elf/12.4.0/plugin/include/: auto-host.h  b-header-vars  bversion.h  configargs.h  options.h  plugin-version.h  tm-preds.h  version.h
tt-metal_compilation_template/runtime/sfpi/compiler/libexec/gcc/riscv32-unknown-elf/12.4.0/: collect2  g++-mapper-server  lto-wrapper
tt-metal_compilation_template/runtime/sfpi/compiler/libexec/gcc/riscv32-unknown-elf/12.4.0/install-tools/: fixincl  mkheaders
tt-metal_compilation_template/runtime/sfpi/compiler/libexec/gcc/riscv32-unknown-elf/12.4.0/plugin/: gengtype
tt-metal_compilation_template/runtime/sfpi/compiler/riscv32-unknown-elf/include/c++/12.4.0/riscv32-unknown-elf/rv32im_xttwh/ilp32/bits/: c++config.h
tt-metal_compilation_template/runtime/sfpi/compiler/riscv32-unknown-elf/lib/: libstdc++.a-gdb.py
tt-metal_compilation_template/runtime/sfpi/compiler/riscv32-unknown-elf/lib/ldscripts/: elf32briscv.x  elf32briscv.xbn  elf32briscv.xc  elf32briscv.xce  elf32briscv.xe  elf32briscv.xn  elf32briscv.xw  elf32briscv.xwe  elf32lriscv.x  elf32lriscv.xbn  elf32lriscv.xc  elf32lriscv.xce  elf32lriscv.xe  elf32lriscv.xn  elf32lriscv.xw  elf32lriscv.xwe  elf64briscv.x  elf64briscv.xbn  elf64briscv.xc  elf64briscv.xce  elf64briscv.xe  elf64briscv.xn  elf64briscv.xw  elf64briscv.xwe  elf64lriscv.x  elf64lriscv.xbn  elf64lriscv.xc  elf64lriscv.xce  elf64lriscv.xe  elf64lriscv.xn  elf64lriscv.xw  elf64lriscv.xwe
tt-metal_compilation_template/runtime/sfpi/compiler/riscv32-unknown-elf/lib/rv32i_xttgs/ilp32/: libstdc++.a-gdb.py
tt-metal_compilation_template/runtime/sfpi/compiler/riscv32-unknown-elf/lib/rv32im_xttbh/ilp32/: libstdc++.a-gdb.py
tt-metal_compilation_template/runtime/sfpi/compiler/riscv32-unknown-elf/lib/rv32im_xttwh/ilp32/: libstdc++.a-gdb.py
tt-metal_compilation_template/runtime/sfpi/compiler/share/info/: as.info  binutils.info  gcc.info  gccinstall.info  gccint.info  gprof.info  ld.info
tt-metal_compilation_template/runtime/sfpi/compiler/share/man/man1/: riscv32-unknown-elf-addr2line.1  riscv32-unknown-elf-ar.1  riscv32-unknown-elf-as.1  riscv32-unknown-elf-c++filt.1  riscv32-unknown-elf-cpp.1  riscv32-unknown-elf-dlltool.1  riscv32-unknown-elf-elfedit.1  riscv32-unknown-elf-g++.1  riscv32-unknown-elf-gcov-dump.1  riscv32-unknown-elf-gcov-tool.1  riscv32-unknown-elf-gcov.1  riscv32-unknown-elf-gprof.1  riscv32-unknown-elf-ld.1  riscv32-unknown-elf-lto-dump.1  riscv32-unknown-elf-nm.1  riscv32-unknown-elf-objcopy.1  riscv32-unknown-elf-objdump.1  riscv32-unknown-elf-ranlib.1  riscv32-unknown-elf-readelf.1  riscv32-unknown-elf-size.1  riscv32-unknown-elf-strings.1  riscv32-unknown-elf-strip.1  riscv32-unknown-elf-windmc.1  riscv32-unknown-elf-windres.1
tt-metal_compilation_template/runtime/sfpi/compiler/share/man/man7/: fsf-funding.7  gfdl.7  gpl.7
tt-metal_compilation_template/src/: hello_world_compute_kernel.cpp
(+69 files in other folders)
